fixed z-index collisions on cards

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,8 +24,8 @@ html[data-theme="dark"],
   --primary-color: #41a0df;
   --secondary-color: #44d581;
   --text-color: #d2d6b8;
-  --text-light: #a7a794;
-  --text-lighter: #818374;
+  --text-light: #969688;
+  --text-lighter: #787974;
   --border-color: #2980b9;
   --border-dull: #30343d;
   --background-color: #24283a;
