--- a/src/styles/components/_bottleneck-card.scss
+++ b/src/styles/components/_bottleneck-card.scss
@@ -93,8 +93,7 @@
     .bottleneck-card__title {
       color: var(--primary-color);
     }
-    .bottleneck-card__content,
-    .bottleneck-card__discipline,
+
     .bottleneck-card__footer-left,
     .bottleneck-card__footer-right {
       position: relative;
